[gd_scene load_steps=4 format=3 uid="uid://d3c68j8erdmn8"]

[ext_resource type="Script" path="res://scenes/conversation_settings.gd" id="1_efb5c"]
[ext_resource type="Texture2D" uid="uid://ddwylhoqb77rg" path="res://icons/message-cog-custom.png" id="2_fd7a4"]
[ext_resource type="Texture2D" uid="uid://cq6q4oktrlqsh" path="res://icons/cloud-refresh-variant-custom.png" id="3_swtgl"]

[node name="ConversationSettings" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_efb5c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="GlobalSystemMessageCheckbox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Use one System Message for the whole conversation"
icon = ExtResource("2_fd7a4")

[node name="GlobalSystemMessageContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GlobalSystemMessageTextLabel" type="Label" parent="VBoxContainer/HBoxContainer/GlobalSystemMessageContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 29
text = "Global System Message"
horizontal_alignment = 1

[node name="GlobalSystemMessageTextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/GlobalSystemMessageContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "You are a helpful assistant!"

[node name="MinimalImageHeightContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/MinimalImageHeightContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Minimal height of images"

[node name="MinimalImageHeightSlider" type="HSlider" parent="VBoxContainer/MinimalImageHeightContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="Label2" type="Label" parent="VBoxContainer/MinimalImageHeightContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "??? px"

[node name="AlwaysIncludeFunctionsSettingContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AlwaysIncludeFunctionsSettingLabel" type="Label" parent="VBoxContainer/AlwaysIncludeFunctionsSettingContainer"]
layout_mode = 2
text = "Include what functions on export?"

[node name="AlwaysIncludeFunctionsSettingOptionButton" type="OptionButton" parent="VBoxContainer/AlwaysIncludeFunctionsSettingContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
popup/item_0/text = "Always include all functions in all conversations"
popup/item_1/text = "Only include functions that were used in that conversation in a conversation"
popup/item_1/id = 1
popup/item_2/text = "Include all functions in every conversation that have been used at least once anywhere"
popup/item_2/id = 2

[node name="APIKeySettingContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="APIKeyLabel" type="Label" parent="VBoxContainer/APIKeySettingContainer"]
layout_mode = 2
text = "API Key:"

[node name="APIKeyEdit" type="LineEdit" parent="VBoxContainer/APIKeySettingContainer"]
layout_mode = 2
size_flags_horizontal = 3
secret = true

[node name="ModelChoiceContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ModelChoiceLabel" type="Label" parent="VBoxContainer/ModelChoiceContainer"]
layout_mode = 2
text = "Model to use for completions:
"

[node name="ModelChoiceOptionButton" type="OptionButton" parent="VBoxContainer/ModelChoiceContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ModelChoiceRefreshButton" type="Button" parent="VBoxContainer/ModelChoiceContainer"]
layout_mode = 2
text = "Refresh"
icon = ExtResource("3_swtgl")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/GlobalSystemMessageCheckbox" to="." method="update_settings_global"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/GlobalSystemMessageContainer/GlobalSystemMessageTextEdit" to="." method="update_settings_global"]
[connection signal="text_changed" from="VBoxContainer/APIKeySettingContainer/APIKeyEdit" to="." method="_on_api_key_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/ModelChoiceContainer/ModelChoiceRefreshButton" to="." method="_on_model_choice_refresh_button_pressed"]
